Added regionPowerPlantgroup as layergroup for PowerPlants, the group is removed from map if there is a existing layer inside, now just powerplants contained in one region are displayed

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -512,6 +512,7 @@
                   layer.on('click', onPowerPlantDataPointClick);
               }
               
+              var regionPowerPlantgroup = L.layerGroup().addTo(map);
               // request all power plants conatined in selected region
               // also include the generation_type option 
               function loadRegionPowerPlants(region, layer){
@@ -531,7 +532,15 @@
                         onEachFeature: enablePopup,
                         pointToLayer: createCircles
                       });
-                      map.addLayer(layer)
+                      //map.addLayer(layer)
+                      if (regionPowerPlantgroup.getLayers().length != 0) {
+                        regionPowerPlantgroup.clearLayers();
+                      } 
+                      else {
+                        regionPowerPlantgroup.addLayer(layer)
+                        
+                      }
+
                     }
                   });
                 }
@@ -540,7 +549,7 @@
               function addPowerPlantToMap(){
 
               }
-
+              
               $.ajax({
                     url: ppr_location,
                     dataType: 'json',
