--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -14,10 +14,12 @@
     <link rel="shortcut icon" type="image/png" href="{% static '/WAM_APP_FRED/img/fav/favicon.ico' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'stemp_abw/img/ionicons-2.0.1/css/ionicons.css' %}">
     <link rel="stylesheet" href="{% static 'WAM_APP_FRED/foundation/css/app.css' %}">
+    <link rel="stylesheet" href="{% static 'WAM_APP_FRED/clusters/css/MarkerCluster.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     {% leaflet_js %}
     {% leaflet_css %}
+    <script src="{% static 'WAM_APP_FRED/clusters/js/leaflet.markercluster-src.js' %}"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
@@ -494,7 +496,10 @@
                         var layer = new L.geoJSON(powerplant, {
                             pointToLayer: createCircles
                         });
-                        map.addLayer(layer)
+                        var markers = L.markerClusterGroup();
+                        markers.addLayer(layer);
+                        map.addLayer(markers);
+                        //map.addLayer(layer)
                         }
                 });
             
