--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -141,18 +141,20 @@
                               <a href="#" class="accordion-title accordion-title--100">Time Span</a>
                               <div class="accordion-content" data-tab-content >
                                 <div class="tabs-panel is-active" id="panel-energy-system">
-                                  <div>Start date
+                                  <form id="wd_timespan">
+
+                                  <div id="wd_timespan_start">Start date
                                   {{start_date}}
                                     </div>
-                                  <div>End date
+                                  <div id="wd_timespan_end">End date
                                   {{end_date}}
                                   </div>
-                                  <form id="TimeSpan">
-
+                                  <!--
                                     <label for="Start">Start</label>
                                     <input id="Start">
                                     <label for="Stop">Stop</label>
                                     <input id="Stop">
+                                  -->
                                   </form>
                               </div>
                             </li>
@@ -385,8 +387,10 @@
                   // this need to be linked to user choice
                   var variable_id = 12;
 
-                  var start_time = '2002-01-31T23:00:00';
-                  var end_time = '2002-03-31T23:00:00';
+                  const start_year = $('#id_wd_timespan_start-year').val();
+                  const start_month = $('#id_wd_timespan_stop-month').val();
+                  const stop_year = $('#id_wd_timespan_stop-year').val();
+                  const stop_month = $('#id_wd_timespan_stop-month').val();
 
                   if (marker.feature.properties.variable){
                     // do not fetch the data a second time
@@ -405,8 +409,10 @@
                         'leaflet_id': leaflet_id,
                         'location_id': location_id,
                         'variable_id': variable_id,
-                        'start_time': start_time,
-                        'end_time': end_time
+                        'start_month': start_month,
+                        'start_year': start_year,
+                        'end_month': stop_month,
+                        'end_year': stop_year
                         },
                         success: displayWeatherDataPoint,
                     });
@@ -530,7 +536,6 @@
                     });
                     // select region and request data
                     layer.on('click', function (event) {
-                      console.log(event)
                       this.setStyle(GerBoundZoomLvlStyle);
                       region = event.sourceTarget;
                       // console.log(region);
